--- a/src/App.css
+++ b/src/App.css
@@ -629,6 +629,32 @@ section .form {
     -o-transition: 0.5s ease-in-out all;
 }
 
+.img_container:hover img {
+    opacity: 0.4;
+}
+
+.img_container:hover .overlay {
+    opacity: 1;
+}
+
+.overlay {
+    transition: 0.5s ease;
+    -webkit-transition: 0.5s ea;
+    -moz-transition: 0.5s ea;
+    -ms-transition: 0.5s ea;
+    -o-transition: 0.5s ea;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, );
+    -moz-transform: translate(-50%, );
+    -ms-transform: translate(-50%, );
+    -o-transform: translate(-50%, );
+    text-align: center;
+}
+
 .text_container {
     flex-grow: 1;
 }
